# RustyBase

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  hkljdfgkSDFSDF  in  out.txt  rust.yml  sampleinputs  sdafdsfFFDSDA
.github/workflows/: rust.yml
src/: File.rs  comparisionengine.rs  comparison.rs  defs.rs  file.rs  main.rs  parsedefs.rs  parser.lalrpop  parser.rs  parserfunc.lalrpop  record.rs  schema.rs  sqlparser.lalrpop  two_way_list.rs
src/scratch/: catalog  comp.rs  filewriter.rs  foo.txt  scratch.rs  scratch_bit.rs  scratch_reader.rs  scratch_record.rs  suck_next.rs
