[package]
name = "rustybase"
version = "0.1.0"
authors = ["Rohit Choudhari <https://www.github.com/InfernapeXavier>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }
